Fixed grid gap and Press page on mobile

--- a/styles/press.scss
+++ b/styles/press.scss
@@ -82,7 +82,6 @@ point 3 - 619px and lower
 
 .area-pattern-press-middle {
   width: 100%;
-  min-height: 800px;
   // row start > column start > row end > column end
   grid-area: 4/2/8/3;
   background-color: var(--yellow);
@@ -96,7 +95,7 @@ point 3 - 619px and lower
 
   .grid-press {
     /*   grid-template-columns: repeat(4,min-content); */
-    grid-template-columns: 1fr 1fr 5fr;
+    grid-template-columns: 1fr 1fr 4fr 1fr;
 
   }
 
@@ -108,7 +107,7 @@ point 3 - 619px and lower
 
   .area-press-work {
     // row start > column start > row end > column end
-    grid-area: 5/3/8/5;
+    grid-area: 5/2/6/5;
     background-color: var(--cream);
   }
 
@@ -126,9 +125,16 @@ point 3 - 619px and lower
 
   .area-pattern-press-middle {
     width: 100%;
-    min-height: 800px;
     // row start > column start > row end > column end
-    grid-area: 4/2/6/3;
+    grid-area: 4/2/5/3;
+    overflow: hidden;
+  }
+
+  .area-pattern-press-end {
+    // row start > column start > row end > column end
+    grid-area: 6/2/7/5;
+    background-color: var(--yellow);
+    height: 80px;
     overflow: hidden;
   }
 
@@ -141,17 +147,45 @@ point 3 - 619px and lower
     margin-top: 40px;
     padding: 0 2px;
     display: grid;
-    grid-gap: 1px 1px;
+    grid-template-columns: 1fr 1fr 4fr 1fr;
+    grid-template-rows: 30px 30px repeat(8, min-content);
+    grid-gap: 2px 2px;
+  }
+
+  .small-logo-mark {
+    min-height: 60px;
+    min-width: 60px;
+    grid-area: 1/1/3/1;
+    background-color: var(--cream);
+  }
+
+  .small-center-mark {
+    position: relative;
+    left: 50%;
+    margin-left: -20px;
+    top: 50%;
+    margin-top: -20px;
+  }
+
+  .small-mark-size {
+    height: 40px;
+    width: 40px;
   }
 
   .area-back {
     // row start > column start > row end > column end
-    grid-area: 1/2/2/2;
+    grid-area: 1/2/3/2;
+  }
+
+  .area-title-press {
+    // row start > column start > row end > column end
+    grid-area: 3/1/4/5;
+    // border-right: 4px solid var(--purple-500);
   }
 
   .area-press-work {
     // row start > column start > row end > column end
-    grid-area: 5/2/8/5;
+    grid-area: 5/1/6/5;
   }
 
   .area-press-extra {
@@ -161,14 +195,19 @@ point 3 - 619px and lower
 
   .area-pattern-press-top {
     // row start > column start > row end > column end
-    grid-area: 1/3/2/5;
+    grid-area: 1/3/3/5;
     overflow: hidden;
   }
 
   .area-pattern-press-middle {
     // row start > column start > row end > column end
-    grid-area: 2/1/6/2;
-    overflow: hidden;
+    grid-area: 4/1/5/2;
+  }
+
+  .area-pattern-press-end {
+    // row start > column start > row end > column end
+    grid-area: 6/1/7/5;
+    height: 6 0px;
   }
 
 }
